# mafia

backend/: .gitignore  Cargo.toml
backend/src/: cli.rs  comms.rs  game_state.rs  lib.rs  main.rs  reject.rs
backend/src/comms/: incoming.rs  mod.rs  outgoing.rs
backend/src/game/: action_request.rs  card.rs  lobby.rs  mod.rs
backend/src/game/card/: city.rs  mafia.rs  mod.rs  syndicate.rs
backend/src/routes/: action.rs  admin.rs  capabilities.rs  events.rs  game_state.rs  lobby.rs  mod.rs  register.rs  user.rs
frontend/: .env  README.md  package-lock.json  package.json  rollup.config.js
frontend/src/: App.svelte  Game.svelte  Login.svelte  backend.ts  cookies.ts  stores.ts  variables.ts
frontend/src/components/: EventList.svelte  History.svelte  PopupAction.svelte  Summary.svelte
frontend/src/components/routes/: Game.svelte  Login.svelte
frontend/src/components/utils/: PrivateRouteGuard.svelte
frontend/src/dto/: action.ts  event.ts
frontend/src/game/: History.svelte
frontend/src/routes/: Game.svelte  Login.svelte
frontend/src/utils/: PrivateRoute.svelte  PrivateRouteGuard.svelte
tests/: api.go  assertions.go  dto.go  flow_test.go  go.mod
tests/utils/: api.go  assertions.go  dto.go
