[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.44"
derive_more = "0.99.16"
env_logger = "0.9.0"
futures = "0.3.17"
itertools = "0.10.1"
lazy_static = "1.4.0"
rustyline = "9.0.0"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
strum = { version = "0.22.0", features = ["derive"] }
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.7", features = ["sync"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
warp = "0.3.1"

[dev-dependencies]
test-case = "1.2.1"
